feat: configure Giscus and implement Resend newsletter integration
- Enable GitHub Discussions and configure Giscus with real repo/category IDs
- Implement Resend email service for newsletter subscriptions
- Add welcome email template for new subscribers
- Add admin notification for new subscriptions
- Update .env.example with Resend configuration

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ NEXT_PUBLIC_ENTRY_MOTIVATION=entry.1234567894
 NEXT_PUBLIC_ENTRY_DATE1=entry.1234567895
 NEXT_PUBLIC_ENTRY_DATE2=entry.1234567896
 NEXT_PUBLIC_ENTRY_MESSAGE=entry.1234567897
+
+# Resend (Newsletter) Configuration
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Admin email for notifications (optional)
+ADMIN_EMAIL=your-email@example.com
