--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-share": "^5.2.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
