--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export:csv": "npx tsx scripts/export-articles-csv.ts"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
