feat: Phase 4-5 complete - newsletter system, admin UI, analytics, performance
Features implemented:
- Newsletter subscriber management (backend API with full CRUD)
- Blog post management UI with JWT authentication
- Google Analytics 4 integration with SPA routing support
- Performance optimizations (Turbopack, standalone output, image caching)
- Accessibility enhancements (ARIA labels, roles, srOnly utility)

Technical details:
- JWT-based admin authentication with HTTP-only cookies
- Blog CRUD operations (list, create, edit, delete posts)
- GA4 tracking with custom events support
- next.config.ts: Turbopack, standalone, console removal in production
- Supabase newsletter system with verification workflow

Documentation:
- Accessibility guidelines document
- Performance optimization guide
- i18n implementation plan (next-intl)
- WORK_LOG.md with complete task history

Breaking changes:
- Removed search page (src/app/search/page.tsx) - will be reimplemented in i18n phase

Files changed: 40 files added/modified/deleted

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,24 @@ ADMIN_EMAIL=your-email@example.com
 #    - repo: "username/repo-name"
 #    - repoId: "R_kgDO..."
 #    - categoryId: "DIC_kwDO..."
+
+# Supabase Configuration (Newsletter & Auth)
+# Get your credentials from https://supabase.com/dashboard
+# 1. Create a new project at https://supabase.com/dashboard/new
+# 2. Go to Project Settings > API to get credentials
+# 3. Run the migration in supabase/migrations/001_newsletter_system.sql
+NEXT_PUBLIC_SUPABASE_URL=https://xxxxxxxxxxxx.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# Admin Authentication
+# Set a strong password to protect admin panel
+# Change this immediately after first login!
+ADMIN_PASSWORD=change-this-password-in-production
+ADMIN_JWT_SECRET=change-this-secret-key-in-production
+
+# Google Analytics 4
+# Get your Measurement ID from https://analytics.google.com/
+# 1. Create a GA4 property and data stream
+# 2. Copy the Measurement ID (format: G-XXXXXXXXXX)
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
