--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
+    "@stripe/stripe-js": "^8.6.4",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.91.1",
     "@vercel/og": "^0.8.6",
@@ -21,6 +22,7 @@
     "mdast-util-to-hast": "^13.2.1",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
+    "pnpm": "^10.28.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-share": "^5.2.2",
@@ -31,6 +33,7 @@
     "remark-html": "^16.0.1",
     "remark-rehype": "^11.1.2",
     "resend": "^6.7.0",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.4.0",
     "unist-util-visit": "^5.1.0"
   },
